# verbformen-cli

./: .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
development/: README.md
tests/: test_verbformen_cli.py
verbformen_cli/: .gitignore  __init__.py  cli.py  clients.py  display.py  downloaders.py  models.py  parsers.py  settings.py
