[tool.poetry]
name = "verbformen-cli"
version = "0.2.1"
description = "Verbformen CLI"
homepage = "https://github.com/millern/verbformen-cli"
repository = "https://github.com/millern/verbformen-cli"
readme = "README.md"
authors = ["Nicholas Miller <njmiller6@gmail.com>"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
xextract = "^0.1.8"
loguru = "^0.5.3"
click = "^7.0"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
rich = "^10.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
flake8 = "^3.9.2"
mypy = "^0.910"
types-requests = "^2.25.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
verbformen="verbformen_cli.cli:lookup"
